[tool.poetry]
name = "cyclegan"
version = "0.1.0"
description = ""
authors = ["Tymek <tymekzapala12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0+cu121"
torchvision = "^0.19.0+cu121"
torchaudio = "^2.4.0+cu121"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
