[tool.poetry]
name = "cyclegan"
version = "0.1.0"
description = ""
authors = ["Tymek <tymekzapala12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "^2.4.0+cu121", source = "pytorch" }
torchvision = { version = "^0.19.0+cu121", source = "pytorch" }
torchaudio = { version = "^2.4.0+cu121", source = "pytorch" }
albumentations = "*"
tqdm = "^4.66.5"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
secondary = true
